# data-evaluator

./: .gitignore  README.md  download_openpi_weights.py  main.py  pyproject.toml
data/train/Task-GrabCuicuishaPlaceMatting-30/.hfd/: last_download_command  repo_metadata.json
docs/: openpi_usage.md
docs/superpowers/plans/: 2025-06-05-openpi-pi05-support-plan.md  2026-05-24-scaling-curve-plot.md  2026-05-25-multi-dataset-scaling-curve.md  2026-05-25-refactor.md  2026-06-10-episodes-extractor.md  2026-06-10-top-k-train-matches.md  2026-06-11-first-obs-extractor.md
docs/superpowers/specs/: 2025-06-05-openpi-pi05-support-design.md  2026-05-24-scaling-curve-plot-design.md  2026-05-25-multi-dataset-scaling-curve-design.md  2026-05-25-refactor-design.md  2026-06-10-episodes-extractor-design.md  2026-06-10-top-k-train-matches-design.md  2026-06-11-first-obs-extractor-design.md
src/: dataset_io.py
src/episodes_extractor/: README.md  __init__.py  __main__.py  _extractor.py
src/episodes_extractor/tests/: test_extractor.py
src/first_obs_extractor/: README.md  __init__.py  __main__.py  _extractor.py
src/first_obs_extractor/tests/: test_extractor.py
src/scaling_curve/: __init__.py  _dataset.py  _embeddings.py  _embeddings_openpi.py  _similarity.py  scaling_curve.py
src/scaling_curve/tests/: test_embeddings_openpi.py  test_scaling_curve.py
src/scaling_curve_evaluator/: __init__.py  _similarity.py  dataset.py  embeddings.py  evaluator.py  scaling_curve.py  similarity.py
src/tests/: test_dataset_io.py
tests/: test_scaling_curve.py
(+7 files in other folders)
