[project]
name = "data-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lerobot[all]==0.4.0",
    "av",
    "numpy",
    "pandas",
    "pillow",
    "tqdm",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaling_curve"]
